--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -72,6 +72,11 @@
   opacity: 1;
 }
 
+.revealdelay.active {
+  transform: translateY(0);
+  opacity: 1;
+}
+
 .boxshadow {
   box-shadow: -1px 10px 26px -3px rgba(0, 0, 0, 0.75);
 }
