--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -188,6 +188,9 @@
 }
 .herodiv img {
   height: clamp(3.2rem, 10vw, 2.3rem);
+  padding: 2px;
+  background: white;
+  border-radius: 50%;
 }
 
 .topmain {
@@ -279,6 +282,13 @@
   .packagedivs .packagediv {
     height: 500px;
     box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.75);
+  }
+}
+@media (min-width: 768px) {
+  .herodiv img {
+    height: clamp(3.2rem, 10vw, 2.3rem);
+    padding: 0px;
+    background-color: transparent;
   }
 }
 @media (min-width: 576px) {
