--- a/resources/css/index.scss
+++ b/resources/css/index.scss
@@ -263,6 +263,9 @@ $i: 25px;
 
     img {
         height: $h1;
+        padding: 2px;
+        background: white;
+        border-radius: 50%;
     }
 
 }
@@ -455,7 +458,16 @@ $i: 25px;
 
 @media (min-width: 768px) {
    
+    .herodiv {
 
+    
+        img {
+            height: $h1;
+            padding: 0px;
+            background-color: transparent;
+        }
+    
+    }
  
 }
 
