--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -193,6 +193,15 @@
   border-radius: 50%;
 }
 
+.heroimg {
+  opacity: 0; /* Set the initial opacity of the image to 0 */
+  transition: all 1s ease; /* Set a transition for the animation */
+}
+
+.rotate {
+  transform: rotate(360deg); /* Set the rotation angle for the animation */
+}
+
 .topmain {
   height: auto;
   background-color: #e8f0f1;
