--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -222,13 +222,13 @@
 }
 
 .packagedivs .packdiv1 {
-  background-image: url(../images/Package1.png);
+  background-image: url(../images/Package3.png);
 }
 .packagedivs .packdiv2 {
-  background-image: url(../images/Package2.png);
+  background-image: url(../images/Package1.png);
 }
 .packagedivs .packdiv3 {
-  background-image: url(../images/Package3.png);
+  background-image: url(../images/Package2.png);
 }
 .packagedivs h4 strong {
   color: #3499A4;
@@ -268,6 +268,11 @@
 .contactus .form-group {
   width: 270px;
 }
+.contactus a {
+  color: #505859;
+  font-size: clamp(1.1rem, 1.8vw, 1.2rem);
+  font-weight: 700;
+}
 
 .websitediv {
   background-color: #e8f0f1;
@@ -280,6 +285,24 @@
 .packagediv {
   background-color: white;
   border-radius: 50px;
+}
+.packagediv h2 {
+  color: #3499A4;
+}
+.packagediv h3 {
+  color: #3499A4;
+}
+.packagediv h3 strong {
+  color: #3499A4;
+}
+.packagediv h4 {
+  color: #3499A4;
+}
+.packagediv h4 strong {
+  color: #3499A4;
+}
+.packagediv i {
+  font-size: clamp(1.2rem, 2.2vw, 1.5rem);
 }
 
 @media (min-width: 1750px) {
@@ -302,7 +325,7 @@
 }
 @media (min-width: 576px) {
   .packagedivs .packagediv {
-    height: 420px;
+    height: 429px;
   }
   .form-group {
     width: 400px !important;
