--- a/resources/css/index.scss
+++ b/resources/css/index.scss
@@ -128,9 +128,9 @@ $i: 25px;
 
 
 .boxshadow {
-    -webkit-box-shadow: -1px 10px 26px -3px rgba(0,0,0,0.75);
-    -moz-box-shadow: -1px 10px 26px -3px rgba(0,0,0,0.75);
-    box-shadow: -1px 10px 26px -3px rgba(0,0,0,0.75);
+    -webkit-box-shadow: -1px -16px 35px 16px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: -1px -16px 35px 16px rgba(0, 0, 0, 0.75);
+    box-shadow: -1px -16px 35px 16px rgba(0, 0, 0, 0.75);
 }
 
 .textshadow {
@@ -206,9 +206,9 @@ $i: 25px;
 
 .navbar {
     background-color: $fifth-color;
-    -webkit-box-shadow: -1px 10px 26px -3px rgba(0,0,0,0.75);
-    -moz-box-shadow: -1px 10px 26px -3px rgba(0,0,0,0.75);
-    box-shadow: -1px 10px 26px -3px rgba(0,0,0,0.75);
+    -webkit-box-shadow: -1px -16px 35px 16px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: -1px -16px 35px 16px rgba(0, 0, 0, 0.75);
+    box-shadow: -1px -16px 35px 16px rgba(0, 0, 0, 0.75);
 
 
     .navlogo {
