--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -82,6 +82,10 @@
   opacity: 1;
 }
 
+a:hover {
+  text-decoration: none;
+}
+
 .boxshadow {
   box-shadow: -1px -16px 35px 16px rgba(0, 0, 0, 0.75);
 }
@@ -322,42 +326,21 @@
   font-size: clamp(1.2rem, 2.2vw, 1.5rem);
 }
 
-@media (min-width: 1750px) {
-  .herodiv video {
-    max-height: 850px;
-  }
+button:focus {
+  outline: none !important;
 }
-@media (min-width: 992px) {
-  .packagedivs .packagediv {
-    height: 500px;
-    box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.75);
-  }
-}
-@media (min-width: 768px) {
-  .herodiv img {
-    height: clamp(3.2rem, 10vw, 2.3rem);
-    padding: 0px;
-    background-color: transparent;
-  }
-}
-@media (min-width: 576px) {
-  .packagedivs .packagediv {
-    height: 429px;
-  }
-  .form-group {
-    width: 400px !important;
-  }
-}
+
 .buttons {
   margin-top: 50px;
   text-align: center;
   border-radius: 30px;
+  text-decoration: none;
 }
 
 .blob-btn {
   z-index: 1;
   position: relative;
-  padding: 10px 46px;
+  padding: 8px 40px;
   text-align: center;
   text-transform: uppercase;
   color: #3499A4;
@@ -466,5 +449,32 @@
 @supports (filter: url("#goo")) {
   .blob-btn:hover .blob-btn__blob {
     transform: translateZ(0) scale(1.4);
+  }
+}
+
+@media (min-width: 1750px) {
+  .herodiv video {
+    max-height: 850px;
+  }
+}
+@media (min-width: 992px) {
+  .packagedivs .packagediv {
+    height: 500px;
+    box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.75);
+  }
+}
+@media (min-width: 768px) {
+  .herodiv img {
+    height: clamp(3.2rem, 10vw, 2.3rem);
+    padding: 0px;
+    background-color: transparent;
+  }
+}
+@media (min-width: 576px) {
+  .packagedivs .packagediv {
+    height: 429px;
+  }
+  .form-group {
+    width: 400px !important;
   }
 }/*# sourceMappingURL=index.css.map */
