--- a/resources/css/index.scss
+++ b/resources/css/index.scss
@@ -323,23 +323,32 @@ a:hover {
 
     .packdiv1 {
         background-image: url(../images/wave.png);
-        background-position: bottom;
+        background-position: left;
+        background-size: cover;
+        transition: 1s;
         &:hover {
-            background-position: center;
+            background-position: right;
+            transition: 1s;
         }
     }
     .packdiv2 {
         background-image: url(../images/wave2.png);
-        background-position: bottom;
+        background-position: left;
+        background-size: cover;
+        transition: 1s;
         &:hover {
-            background-position: center;
+            background-position: right;
+            transition: 1s;
         }
     }
     .packdiv3 {
         background-image: url(../images/wave3.png);
-        background-position: bottom;
+        background-position: left;
+        background-size: cover;
+        transition: 1s;
         &:hover {
-            background-position: center;
+            background-position: right;
+            transition: 1s;
         }
     }
 
@@ -453,7 +462,7 @@ a:hover {
 }
 
 .packagediv {
-    background-image: url(../images/wave.png);
+    background-image: url(../images/wavelong.png);
     background-position: center;
     background-size: cover;
     transition: 1s;
