--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -269,12 +269,12 @@ a:hover {
   height: 390px;
   background-color: #e8f0f1;
   border-radius: 50px;
-  transition: 0.5s;
+  transition: 0.7s;
   box-shadow: -1px 10px 26px -3px rgba(0, 0, 0, 0.75);
   max-width: 380px;
 }
 .packagedivs .packagediv:hover {
-  transition: 0.5s;
+  transition: 0.7s;
   box-shadow: -1px 10px 26px -3px rgba(0, 0, 0, 0.75);
 }
 .packagedivs ul {
@@ -332,13 +332,14 @@ a:hover {
 
 .packagediv {
   background-image: url(../images/wavelong.png);
-  background-position: center;
-  background-size: cover;
+  background-position: left;
   transition: 1s;
+  background-repeat: no-repeat;
+  box-shadow: -1px 10px 26px -3px rgba(0, 0, 0, 0.75);
   border-radius: 50px;
 }
 .packagediv:hover {
-  background-position: bottom;
+  background-position: right;
   transition: 1s;
   box-shadow: -1px 10px 26px -3px rgba(0, 0, 0, 0.75);
 }
@@ -363,6 +364,28 @@ a:hover {
 .packagediv .packagebullets {
   background-color: rgba(232, 240, 241, 0.6784313725);
   border-radius: 30px;
+}
+
+.packagediv2 {
+  background-image: url(../images/wavelong2.png);
+}
+
+.packagediv3 {
+  background-image: url(../images/wavelong3.png);
+}
+
+footer {
+  background-color: #3499A4;
+  height: 400px;
+  color: white;
+}
+footer i {
+  color: white;
+  font-size: clamp(2rem, 7vw, 1.9rem);
+}
+footer h6 {
+  color: white;
+  font-weight: 500;
 }
 
 button:focus {
@@ -499,6 +522,9 @@ button:focus {
 @media (min-width: 992px) {
   .packagedivs .packagediv {
     height: 500px;
+    box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.75);
+  }
+  .packagediv {
     box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.75);
   }
 }
