--- a/resources/css/index.scss
+++ b/resources/css/index.scss
@@ -368,7 +368,7 @@ a:hover {
         height: 390px;
         background-color: $sixth-color;
         border-radius: 50px;
-        transition: 0.5s;
+        transition: 0.7s;
         -webkit-box-shadow: -1px 10px 26px -3px rgba(0,0,0,0.75);
         -moz-box-shadow: -1px 10px 26px -3px rgba(0,0,0,0.75);
         box-shadow: -1px 10px 26px -3px rgba(0,0,0,0.75);
@@ -376,7 +376,7 @@ a:hover {
 
 
         &:hover {
-            transition: 0.5s;
+            transition: 0.7s;
             -webkit-box-shadow: -1px 10px 26px -3px rgba(0,0,0,0.75);
             -moz-box-shadow: -1px 10px 26px -3px rgba(0,0,0,0.75);
             box-shadow: -1px 10px 26px -3px rgba(0,0,0,0.75);
@@ -463,12 +463,15 @@ a:hover {
 
 .packagediv {
     background-image: url(../images/wavelong.png);
-    background-position: center;
-    background-size: cover;
+    background-position: left;
     transition: 1s;
+    background-repeat: no-repeat;
+    -webkit-box-shadow: -1px 10px 26px -3px rgba(0,0,0,0.75);
+    -moz-box-shadow: -1px 10px 26px -3px rgba(0,0,0,0.75);
+    box-shadow: -1px 10px 26px -3px rgba(0,0,0,0.75);
     
     &:hover {
-        background-position: bottom;
+        background-position: right;
         transition: 1s;
         -webkit-box-shadow: -1px 10px 26px -3px rgba(0,0,0,0.75);
         -moz-box-shadow: -1px 10px 26px -3px rgba(0,0,0,0.75);
@@ -501,6 +504,30 @@ a:hover {
 
 }
 
+.packagediv2 {
+    background-image: url(../images/wavelong2.png);
+}
+.packagediv3 {
+    background-image: url(../images/wavelong3.png);
+}
+
+//   FOOTER
+////////////////////////
+
+footer {
+    background-color: $fourth-color;
+    height: 400px;
+    color: white;
+
+    i {
+        color: white;
+        font-size: $h2;
+    }
+    h6 {
+        color: white;
+        font-weight: 500;
+    }
+}
 
 //   BUTTON BLOB CSS
 ////////////////////////
@@ -686,6 +713,13 @@ button:focus {
             -moz-box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.75);
             box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.75);
         }
+    }
+
+    .packagediv {
+
+        -webkit-box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.75);
+        -moz-box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.75);
+        box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.75);
     }
 
 
